<resources>
    <string name="app_name">Ye Academy</string>
    <string name="log_in_button">Log In</string>
    <string name="create_account">Create New Account</string>
    <string name="continue_without_login">Continue With Out Logging In</string>
    <string name="Username">Email</string>
    <string name="Password">Password</string>
    <string name="login">Login</string>
    <string name="menu">MENU</string>
    <string name="school">School</string>
    <string name="classes">Classes</string>
    <string name="courses">Courses</string>
    <string name="grades">Grades</string>
</resources>